--- a/pages/french/menuAndWine.html
+++ b/pages/french/menuAndWine.html
@@ -76,6 +76,9 @@
               </div>
             </div>
           </div>
+          <div class="openMenu">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, sapiente, quisquam. Quasi suscipit enim obcaecati similique. Aliquid sit laboriosam velit deserunt, pariatur, eveniet qui magni illo fugiat, dolorem, hic facere!</p>
+          </div>
         </div>
       </div>
     </section>
