Enjoy ton css defectueux

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
-            <a href="index.html" title="passage à la partie française du site"><img src="images/frenchFlag.png" alt="french flag" /></a>
-            <a href="pages/english/index.html" title="Passage à la partie anglaise du site"><img src="images/englishFlag.png" alt="english flag" /></a>
+            <a href="index.html" title="passage à la partie française du site"><img src="images/flagFrench.png" alt="french flag" /></a>
+            <a href="pages/english/index.html" title="Passage à la partie anglaise du site"><img src="images/flagEnglish.png" alt="english flag" /></a>
           </div>
         </div>
       </div>
