--- a/pages/english/environment.html
+++ b/pages/english/environment.html
@@ -18,12 +18,12 @@
           <h1><a href="../../pages/english/index.html">La Récréation</a></h1>
 
           <div class="tel_header">
-            <img src="../../images/phone.png" alt="logo téléphone" />
+            <img src="../../images/phone.png" alt="logo phone" />
             <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
-      <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/frenchFlag.png" alt="french flag" /></a>
-<a href="../english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
+            <a href="../../index.html" title="Go to the french home page"><img src="../../images/flagFrench.png" alt="french flag" /></a>
+            <a href="../english/index.html" title="Go to the english home page"><img src="../../images/flagEnglish.png" alt="english flag" /></a>
           </div>
         </div>
       </div>
