--- a/pages/french/legalMentions.html
+++ b/pages/french/legalMentions.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
 </head>
 
-<body>
+<body class="backgroundLegal">
 
   <header id="header">
     <div class="row">
@@ -22,8 +22,8 @@
             <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
-            <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/frenchFlag.png" alt="french flag" /></a>
-            <a href="../../pages/english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
+            <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/flagFrench.png" alt="french flag" /></a>
+            <a href="../../pages/english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/flagEnglish.png" alt="english flag" /></a>
           </div>
         </div>
       </div>
@@ -49,59 +49,60 @@
   <section id="legalMentions">
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
-        <h1>MENTIONS LEGALES</h1>
-        <p>Conformément aux dispositions de l’article 6 III-1 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique, nous vous informons que :</p>
-        <p>
-          Le présent site est édité par :
-        </p>
-        <p>
-          LA RECREATION
-          <br/> Adresse du siège social :Le Bourg - 46250 Les Arques
-          <br/> Au capital social de :205.000,00 EURO
-          <br/> Numéro RCS :Cahors B 529 174 310
-          <br/> Téléphone :0565228808
-          <br/> E-Mail : lsoupirot@gmail.com
-          <br/> Numéro SIREN :529174310
-        </p>
-        <p>
-          Le directeur de la publication est : M. SOUPIROT LUDOVIC en qualité de dirigeant.
-        </p>
-        <p>
-          <!---- MODIFIER CA -->
-          L’hébergeur du site assurant le stockage direct et permanent est :
-          <br/>OVH
-          <br/>SAS au capital de 10 069 020 €
-          <br/>RCS Lille Métropole 424 761 419 00045
-          <br/>Code APE 2620Z
-          <br/>N° TVA : FR 22 424 761 419
-          <br/>Siège social : 2 rue Kellermann - 59100 Roubaix - France.
-          <br/>Directeur de la publication : Octave KLABA
-        </p>
-        <p>
-          Conformément à la loi Informatique et libertés du 6 janvier 1978 modifiée en 2004, les données à caractère personnel sont destinées à l’exploitant du site et leur usage conforme aux finalités déclarées à la Cnil.
-        </p>
-        <p>
-          Les données sont destinées à la société LA RECREATION responsable du traitement.
-        </p>
-        <p>
-          Les informations indispensables sont signalées par un astérisque dans le formulaire. A défaut, il ne pourra être répondu à la demande de l’utilisateur. Les autres informations demandées, pour lesquelles la réponse de l’utilisateur est facultative, sont destinées à mieux connaitre l’utilisateur et à améliorer les services proposés. Conformément aux dispositions de la « loi Informatique et libertés » du 6 janvier 1978 modifiée en 2004, l’utilisateur dispose d’un droit d’accès, de rectification et de suppression des données à caractère personnel le concernant. La mise en œuvre de ces droits est possible par simple courriel envoyé à l’adresse figurant ci-dessus.
-        </p>
-        <p>
-          L’utilisateur dispose également d’un droit d’opposition au traitement de ses données pour des motifs légitimes ainsi qu’un droit d’opposition à ce que ces données soient utilisées à des fins de prospection commerciale.
-        </p>
-        <p>
-          L’utilisateur est informé que lors de ses visites sur le site, un cookie peut s’installer automatiquement sur son logiciel de navigation.Le paramétrage du logiciel de navigation permet d’informer de la présence de cookie et éventuellement, de la refuser de la manière décrite à l’adresse suivante <a href="https://www.ovh.com/fr/" title="Website LA RECREATION">https://www.ovh.com/fr/</a>.
-        </p>
-        <p>
-          La structure générale et l’architecture du site, ainsi que chacun de ses éléments, notamment les logiciels, textes, images animées ou non, sont protégés par le droit d’auteur. A ce titre, toute utilisation et notamment toute reproduction totale ou partielle du site ou de ses éléments, ainsi que tout transfert de ses éléments vers un autre site sans l’accord écrit et exprès des ayants droit est interdite et constituerait une contrefaçon sanctionnée par les articles L. 335-2 et suivants du Code de la propriété intellectuelle.
-        </p>
-        <p>
-          Les marques (semi-figuratives ou non), ainsi que les logos figurant sur le site sont protégés.</p>
-        <p>
-          Toute reproduction totale ou partielle de ces marques ou de ces logos effectuée à partir des éléments du site sans l'autorisation des ayants droit est donc prohibée.
-        </p>
-        <p>
-          L’utilisateur ne peut mettre en place un hyperlien en direction du site sans autorisation expresse et préalable.</p>
+        <div class="textLegal">
+          <h1>MENTIONS LEGALES</h1>
+          <p>Conformément aux dispositions de l’article 6 III-1 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique, nous vous informons que :</p>
+          <p>
+            Le présent site est édité par :
+          </p>
+          <p>
+            LA RECREATION
+            <br/> Adresse du siège social :Le Bourg - 46250 Les Arques
+            <br/> Au capital social de :205.000,00 EURO
+            <br/> Numéro RCS :Cahors B 529 174 310
+            <br/> Téléphone :0565228808
+            <br/> E-Mail : lsoupirot@gmail.com
+            <br/> Numéro SIREN :529174310
+          </p>
+          <p>
+            Le directeur de la publication est : M. SOUPIROT LUDOVIC en qualité de dirigeant.
+          </p>
+          <p>
+            L’hébergeur du site assurant le stockage direct et permanent est :
+            <br/>OVH
+            <br/>SAS au capital de 10 069 020 €
+            <br/>RCS Lille Métropole 424 761 419 00045
+            <br/>Code APE 2620Z
+            <br/>N° TVA : FR 22 424 761 419
+            <br/>Siège social : 2 rue Kellermann - 59100 Roubaix - France.
+            <br/>Directeur de la publication : Octave KLABA
+          </p>
+          <p>
+            Conformément à la loi Informatique et libertés du 6 janvier 1978 modifiée en 2004, les données à caractère personnel sont destinées à l’exploitant du site et leur usage conforme aux finalités déclarées à la Cnil.
+          </p>
+          <p>
+            Les données sont destinées à la société LA RECREATION responsable du traitement.
+          </p>
+          <p>
+            Les informations indispensables sont signalées par un astérisque dans le formulaire. A défaut, il ne pourra être répondu à la demande de l’utilisateur. Les autres informations demandées, pour lesquelles la réponse de l’utilisateur est facultative, sont destinées à mieux connaitre l’utilisateur et à améliorer les services proposés. Conformément aux dispositions de la « loi Informatique et libertés » du 6 janvier 1978 modifiée en 2004, l’utilisateur dispose d’un droit d’accès, de rectification et de suppression des données à caractère personnel le concernant. La mise en œuvre de ces droits est possible par simple courriel envoyé à l’adresse figurant ci-dessus.
+          </p>
+          <p>
+            L’utilisateur dispose également d’un droit d’opposition au traitement de ses données pour des motifs légitimes ainsi qu’un droit d’opposition à ce que ces données soient utilisées à des fins de prospection commerciale.
+          </p>
+          <p>
+            L’utilisateur est informé que lors de ses visites sur le site, un cookie peut s’installer automatiquement sur son logiciel de navigation.Le paramétrage du logiciel de navigation permet d’informer de la présence de cookie et éventuellement, de la refuser de la manière décrite à l’adresse suivante <a href="https://www.ovh.com/fr/" title="Website LA RECREATION">https://www.ovh.com/fr/</a>.
+          </p>
+          <p>
+            La structure générale et l’architecture du site, ainsi que chacun de ses éléments, notamment les logiciels, textes, images animées ou non, sont protégés par le droit d’auteur. A ce titre, toute utilisation et notamment toute reproduction totale ou partielle du site ou de ses éléments, ainsi que tout transfert de ses éléments vers un autre site sans l’accord écrit et exprès des ayants droit est interdite et constituerait une contrefaçon sanctionnée par les articles L. 335-2 et suivants du Code de la propriété intellectuelle.
+          </p>
+          <p>
+            Les marques (semi-figuratives ou non), ainsi que les logos figurant sur le site sont protégés.</p>
+          <p>
+            Toute reproduction totale ou partielle de ces marques ou de ces logos effectuée à partir des éléments du site sans l'autorisation des ayants droit est donc prohibée.
+          </p>
+          <p>
+            L’utilisateur ne peut mettre en place un hyperlien en direction du site sans autorisation expresse et préalable.</p>
+        </div>
       </div>
     </div>
   </section>
