--- a/pages/english/kitchenAndTakeaway.html
+++ b/pages/english/kitchenAndTakeaway.html
@@ -18,15 +18,16 @@
           <h1><a href="../../pages/english/index.html">La Récréation</a></h1>
 
           <div class="tel_header">
-            <img src="../../images/phone.png" alt="logo téléphone" />
+            <img src="../../images/phone.png" alt="logo phone" />
             <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
-            <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/frenchFlag.png" alt="french flag" /></a>
-<a href="../english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
+            <a href="../../index.html" title="Go to the french home page"><img src="../../images/flagFrench.png" alt="french flag" /></a>
+            <a href="../english/index.html" title="Go to the english home page"><img src="../../images/flagEnglish.png" alt="english flag" /></a>
           </div>
         </div>
       </div>
+    </div>
     </div>
     <div class="menuSite">
       <div class="row">
@@ -85,8 +86,8 @@
 
         <div class="columns large-7 medium-12 small-12">
           <div class="secondPictureKitchen">
-            <img src="../../images/meatKitchen.jpg" alt="Photo plat traiteur 1" class="spkImg1" />
-            <img src="../../images/fruitKitchen.jpg" alt="Photo plat traiteur 2" class="spkImg2" />
+            <img src="../../images/kitchenMeat.jpg" alt="Photo plat traiteur 1" class="spkImg1" />
+            <img src="../../images/kitchenFruit.jpg" alt="Photo plat traiteur 2" class="spkImg2" />
           </div>
         </div>
       </div>
@@ -94,7 +95,7 @@
 
   </section>
 
-<footer>
+  <footer>
     <div class="row">
       <div class="footerCss">
         <div class="columns large-4 medium-4 small-4">
