--- a/pages/english/legalMentions.html
+++ b/pages/english/legalMentions.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
 </head>
 
-<body>
+<body class="backgroundLegal">
 
   <header id="header">
     <div class="row">
@@ -18,15 +18,16 @@
           <h1><a href="../../pages/english/index.html">La Récréation</a></h1>
 
           <div class="tel_header">
-            <img src="../../images/phone.png" alt="logo téléphone" />
+            <img src="../../images/phone.png" alt="logo phone" />
             <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
-            <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/frenchFlag.png" alt="french flag" /></a>
-            <a href="../english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
+            <a href="../../index.html" title="Go to the french home page"><img src="../../images/flagFrench.png" alt="french flag" /></a>
+            <a href="../english/index.html" title="Go to the english home page"><img src="../../images/flagEnglish.png" alt="english flag" /></a>
           </div>
         </div>
       </div>
+    </div>
     </div>
     <div class="menuSite">
       <div class="row">
@@ -49,62 +50,63 @@
   <section id="legalMentions">
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
-        <h1>LEGALS MENTIONS</h1>
-        <p>In accordance with the provisions of Article 6 III-1 of Law No. 2004-575 of June 21, 2004 for confidence in the digital economy, we inform you that :</p>
-        <p>
-          This site is edited by:
+        <div class="textLegal">
+          <h1>LEGALS MENTIONS</h1>
+          <p>In accordance with the provisions of Article 6 III-1 of Law No. 2004-575 of June 21, 2004 for confidence in the digital economy, we inform you that :</p>
+          <p>
+            This site is edited by:
 
-        </p>
-        <p>
-          LA RECREATION
-          <br/> Registered Address :Le Bourg - 46250 Les Arques
-          <br/> To the share capital of :205.000,00 EURO
-          <br/> Number RCS :Cahors B 529 174 310
-          <br/> Phone :0565228808
-          <br/> E-Mail : lsoupirot@gmail.com
-          <br/> SIREN number :529174310
-        </p>
-        <p>
-          The editor is: Mr. SOUPIROT LUDOVIC as a leader.
-        </p>
-        <p>
-          <!---- MODIFIER CA -->
-          The host of the site ensuring the direct and permanent storage is:
-          <br/>OVH
-          <br/>SAS with capital of 10 069 020 €
-          <br/>RCS Lille Métropole 424 761 419 00045
-          <br/>Code APE 2620Z
-          <br/>N° TVA : FR 22 424 761 419
-          <br/>Head office : 2 rue Kellermann - 59100 Roubaix - France.
-          <br/>Publication Director : Octave KLABA
-        </p>
-        <p>
-          In accordance with the Data Protection Act of 6 January 1978 amended in 2004, the personal data are intended for the site operator and their use in accordance with the stated purposes of the CNIL.
-        </p>
-        <p>
-          The data are intended for the LA RECREATION company responsible for the treatment.
-        </p>
-        <p>
-          The required information is marked with an asterisk in the form. Failure to do so will not be possible at the request of the user. The other information requested, for which the user's response is optional, is intended to better know the user and improve the services offered. In accordance with the "Data Protection Act" of 6 January 1978 amended in 2004, the user has the right to access, rectify and delete personal data concerning him / her. Implementation of these rights is possible by simple e-mail sent to the above address.
-        </p>
-        <p>
-          The user also has the right to object to the processing of his data for legitimate reasons as well as a right to object to the use of this data for the purposes of commercial prospection.
-        </p>
-        <p>
-          The user is informed that during his visits to the site, a cookie can be installed automatically on his software of navigation. The setting of the software of navigation makes it possible to inform of the presence of cookie and possibly to refuse it Described at the following address: <a href="https://www.ovh.com/fr/" title="Website LA RECREATION">https://www.ovh.com/fr/</a>.
-        </p>
-        <p>
-          The general structure and the architecture of the site, as well as each of its elements, in particular the software, texts, moving images or not, are protected by the copyright. As such, any use and in particular any total or partial reproduction of the site or its elements and any transfer of its elements to another site without the written and express agreement of the rightful owners is prohibited and would constitute an infringement sanctioned by the Articles L. 335-2 et seq. Of the Intellectual Property Code.
-        </p>
-        <p>
-          The marks (semi-figurative or not), as well as the logos appearing on the site are protected.</p>
-        <p>
-          Any total or partial reproduction of these marks or logos made from the elements of the site without the authorization of the beneficiaries is therefore prohibited.
-        </p>
-        <p>
-          The user can not set up a hyperlink to the site without express prior authorization.</p>
+          </p>
+          <p>
+            LA RECREATION
+            <br/> Registered Address :Le Bourg - 46250 Les Arques
+            <br/> To the share capital of :205.000,00 EURO
+            <br/> Number RCS :Cahors B 529 174 310
+            <br/> Phone :0565228808
+            <br/> E-Mail : lsoupirot@gmail.com
+            <br/> SIREN number :529174310
+          </p>
+          <p>
+            The editor is: Mr. SOUPIROT LUDOVIC as a leader.
+          </p>
+          <p>
+            <!---- MODIFIER CA -->
+            The host of the site ensuring the direct and permanent storage is:
+            <br/>OVH
+            <br/>SAS with capital of 10 069 020 €
+            <br/>RCS Lille Métropole 424 761 419 00045
+            <br/>Code APE 2620Z
+            <br/>N° TVA : FR 22 424 761 419
+            <br/>Head office : 2 rue Kellermann - 59100 Roubaix - France.
+            <br/>Publication Director : Octave KLABA
+          </p>
+          <p>
+            In accordance with the Data Protection Act of 6 January 1978 amended in 2004, the personal data are intended for the site operator and their use in accordance with the stated purposes of the CNIL.
+          </p>
+          <p>
+            The data are intended for the LA RECREATION company responsible for the treatment.
+          </p>
+          <p>
+            The required information is marked with an asterisk in the form. Failure to do so will not be possible at the request of the user. The other information requested, for which the user's response is optional, is intended to better know the user and improve the services offered. In accordance with the "Data Protection Act" of 6 January 1978 amended in 2004, the user has the right to access, rectify and delete personal data concerning him / her. Implementation of these rights is possible by simple e-mail sent to the above address.
+          </p>
+          <p>
+            The user also has the right to object to the processing of his data for legitimate reasons as well as a right to object to the use of this data for the purposes of commercial prospection.
+          </p>
+          <p>
+            The user is informed that during his visits to the site, a cookie can be installed automatically on his software of navigation. The setting of the software of navigation makes it possible to inform of the presence of cookie and possibly to refuse it Described at the following address: <a href="https://www.ovh.com/fr/" title="Website LA RECREATION">https://www.ovh.com/fr/</a>.
+          </p>
+          <p>
+            The general structure and the architecture of the site, as well as each of its elements, in particular the software, texts, moving images or not, are protected by the copyright. As such, any use and in particular any total or partial reproduction of the site or its elements and any transfer of its elements to another site without the written and express agreement of the rightful owners is prohibited and would constitute an infringement sanctioned by the Articles L. 335-2 et seq. Of the Intellectual Property Code.
+          </p>
+          <p>
+            The marks (semi-figurative or not), as well as the logos appearing on the site are protected.</p>
+          <p>
+            Any total or partial reproduction of these marks or logos made from the elements of the site without the authorization of the beneficiaries is therefore prohibited.
+          </p>
+          <p>
+            The user can not set up a hyperlink to the site without express prior authorization.</p>
+        </div>
       </div>
-    </div>
   </section>
 
   <footer>
@@ -132,6 +134,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
   </footer>
   <script type="text/javascript" src="../../scripts/main.js"></script>
