--- a/pages/french/kitchenAndTakeaway.html
+++ b/pages/french/kitchenAndTakeaway.html
@@ -22,8 +22,8 @@
             <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
-            <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/frenchFlag.png" alt="french flag" /></a>
-            <a href="../../pages/english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
+            <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/flagFrench.png" alt="french flag" /></a>
+            <a href="../../pages/english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/flagEnglish.png" alt="english flag" /></a>
           </div>
         </div>
       </div>
@@ -85,8 +85,8 @@
 
         <div class="columns large-7 medium-12 small-12">
           <div class="secondPictureKitchen">
-            <img src="../../images/meatKitchen.jpg" alt="Photo plat traiteur 1" class="spkImg1" />
-            <img src="../../images/fruitKitchen.jpg" alt="Photo plat traiteur 2" class="spkImg2" />
+            <img src="../../images/kitchenMeat.jpg" alt="Photo plat traiteur 1" class="spkImg1" />
+            <img src="../../images/kitchenFruit.jpg" alt="Photo plat traiteur 2" class="spkImg2" />
           </div>
         </div>
       </div>
@@ -101,7 +101,7 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-            <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
               <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
               <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
               <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
