--- a/pages/french/menuAndWine.html
+++ b/pages/french/menuAndWine.html
@@ -77,7 +77,22 @@
             </div>
           </div>
           <div class="openMenu">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, sapiente, quisquam. Quasi suscipit enim obcaecati similique. Aliquid sit laboriosam velit deserunt, pariatur, eveniet qui magni illo fugiat, dolorem, hic facere!</p>
+            Menu du petit écolier :<br/><br/> 
+            37€ <br/><br/>  
+            Entrée + Plat + Dessert <br/><br/> 
+            Un menu haut en couleur qui vous fera découvrir les créations du chef, ou encore les classiques de La Récréation. 
+            <p class="text2">
+            Menu du maître d’école :<br/><br/> 
+            46€ <br/><br/>  
+            Dégustation 2 Entrées + 2 Plats + 2 Desserts.<br/><br/> Pour faire vibrer vos papilles, rien de tel qu’une dégustation de nos différents mets. Pas de jaloux, il y en aura pour tous les goûts.  </p>
+            <p class="text3">
+            Menu La Récréation :<br/><br/> 
+            26€ <br/><br/>
+            Plat + Dessert<br/><br/>
+            Exclusivement réalisé avec des produits de saison et renouvelé tous les jours. </p>
+            <p class="text4">
+            Carte des vins :<br/><br/> 
+            Le restaurant vous permettra de découvrir les saveurs de la région. Une carte variée, entre vins de Cahors, classiques Français ou encore grands vins dans la cave du restaurant, la Récréation devrait régaler les amateurs de vin. </p>
           </div>
         </div>
       </div>
