--- a/pages/french/kitchenAndTakeaway.html
+++ b/pages/french/kitchenAndTakeaway.html
@@ -59,18 +59,26 @@
           <div class="firstTextKitchen">
             <h2>NOS COURS DE CUISINE</h2>
             <p>Notre chef vous propose des cours de cuisine le temps d’une matinée et d’un déjeuner le midi. Venez apprendre à cuisiner des saveurs exotiques ou encore des plats traditionnels revisités par notre chef Rémy Cougnac durant ces cours de cuisine de 3 heures. Créer avec nous nos raviolis de homard sauce corail, des croustillants de saint Jacques aux cheveux d’anges, des suprêmes de cailles désossés ou encore une douceur de mangue au coeur coulant passion. Vous assisterez à une création de cocktail qui vous permettra d’accompagner vos créations gastronomiques du midi.
-              <br/>
-              <br/> Tarifs cours de cuisine :
-              <br/>
-              <br/> 76€ : cours de cuisine de 2h30 + création de cocktail + déjeuner du midi
-              <br/> 40€ : accompagnant au déjeuner du midi.
-              <br/>
-              <br/> N’hésitez pas à nous contacter pour des renseignements supplémentaires au 05 65 22 88 08.</p>
+            </p>
           </div>
         </div>
       </div>
     </div>
-
+    <div class="middlePartKitchen">
+      <div class="row">
+        <div class="columns large-12 medium-12 small-12">
+          <div class="middleTextKitchen">
+            <p>Tarifs cours de cuisine :
+              <br/>
+              <br/> 76€ : cours de cuisine de 2h30 + création de cocktail + déjeuner du midi
+              <br/> 40€ : accompagnant au déjeuner du midi.
+              <br/>
+              <br/> N’hésitez pas à nous contacter pour des renseignements
+              <br/>supplémentaires au 05 65 22 88 08.</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <div id="secondPartKitchen">
       <div class="row">
         <div class="columns large-5 medium-12 small-12">
