--- a/pages/french/environment.html
+++ b/pages/french/environment.html
@@ -68,7 +68,7 @@
       <div class="row">
         <div class="columns large-7 medium-12 small-12">
           <div class="firstPictureEnvironment">
-            <img class="pictureEnvironment" src="../../images/mus%C3%A9e_Zadkine.jpg" alt="Le musée Zadkine" />
+            <img class="pictureEnvironment" src="../../images/zadkineMuseum.jpg" alt="Le musée Zadkine" />
           </div>
         </div>
         <div class="columns large-5 medium-12 small-12">
