--- a/pages/french/menuAndWine.html
+++ b/pages/french/menuAndWine.html
@@ -1,79 +1,78 @@
 <!doctype html>
 <html class="no-js" lang="fr">
 
-  <head>
-    <meta charset="utf-8" />
-    <title>La Récréation</title>
-    <link rel="stylesheet" href="../../styles/foundation.min.css" />
-    <link rel="stylesheet" href="../../styles/style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <title>La Récréation</title>
+  <link rel="stylesheet" href="../../styles/foundation.min.css" />
+  <link rel="stylesheet" href="../../styles/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
+</head>
 
-  <body class="bodyMenu">
+<body class="bodyMenu">
 
-    <header id="header">
-      <div class="row">
-        <div class="columns large-12 medium-12 small-12">
-          <div class="laRecreation">
-            <h1><a href="../../index.html">La Récréation</a></h1>
+  <header id="header">
+    <div class="row">
+      <div class="columns large-12 medium-12 small-12">
+        <div class="laRecreation">
+          <h1><a href="../../index.html">La Récréation</a></h1>
 
-            <div class="tel_header">
-              <img src="../../images/phone.png" alt="logo téléphone" />
-              <p>05 62 22 88 08</p>
-            </div>
-            <div class="lang_header">
-              <img src="../../images/frenchFlag.png" alt="french flag" />
-              <img src="../../images/englishFlag.png" alt="english flag" />
-            </div>
+          <div class="tel_header">
+            <img src="../../images/phone.png" alt="logo téléphone" />
+            <p>05 62 22 88 08</p>
+          </div>
+          <div class="lang_header">
+            <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/flagFrench.png" alt="french flag" /></a>
+            <a href="../../pages/english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/flagEnglish.png" alt="english flag" /></a>
           </div>
         </div>
       </div>
-      <div class="menuSite">
-        <div class="row">
-          <div class="columns large-12 medium-12 small-12">
-
-            <nav>
-              <ul>
-                <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
-                <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
-                <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
-                <li><a class="lineUnderLink" href="../../pages/french/environment.html">Environnement</a></li>
-                <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-      </div>
-    </header>
-
-    <section>
+    </div>
+    <div class="menuSite">
       <div class="row">
         <div class="columns large-12 medium-12 small-12">
-          <div class="menusAndVine">
-            <div class="menu1">
-             <img src="../../images/menu1.jpg" alt="menu1"/>
-              <div class="textMenu1">
-                <p>MENU DU PETIT ECOLIER
-                </p>
-              </div>
+
+          <nav>
+            <ul>
+              <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/environment.html">Environnement</a></li>
+              <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <section>
+    <div class="row">
+      <div class="columns large-12 medium-12 small-12">
+        <div class="menusAndVine">
+          <div class="menu1">
+            <img src="../../images/menu1.jpg" alt="menu1" />
+            <div class="textMenu1">
+              <p>MENU DU PETIT ECOLIER
+              </p>
             </div>
-            <div class="menu2">
-             <img src="../../images/menu2.jpg" alt="menu2"/>
-              <div class="textMenu2">
-                <p>MENU DU MAITRE D'ECOLE</p>
-              </div>
+          </div>
+          <div class="menu2">
+            <img src="../../images/menu2.jpg" alt="menu2" />
+            <div class="textMenu2">
+              <p>MENU DU MAITRE D'ECOLE</p>
             </div>
-            <div class="menu3">
-             <img src="../../images/menu3.jpg" alt="menu3"/>
-              <div class="textMenu3">
-                <p>MENU LA RECREATION</p>
-              </div>
+          </div>
+          <div class="menu3">
+            <img src="../../images/menu3.jpg" alt="menu3" />
+            <div class="textMenu3">
+              <p>MENU LA RECREATION</p>
             </div>
-            <div class="menu4">
-             <img src="../../images/vine.jpg" alt="vine"/>
-              <div class="textMenu4">
-                <p>CARTE DES VINS</p>
-              </div>
+          </div>
+          <div class="menu4">
+            <img src="../../images/vine.jpg" alt="vine" />
+            <div class="textMenu4">
+              <p>CARTE DES VINS</p>
             </div>
           </div>
           <div class="openMenu">
@@ -96,35 +95,37 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
+    </div>
+  </section>
 
-    <footer>
-      <!--<link rel="stylesheet" href="styles/foundation.min.css" />-->
-      <div class="row">
-        <div class="footerCss">
-          <div class="columns large-4 medium-4 small-4">
-            <div class="leftFooter">
-              <p>
-                <a href="#" title="Page Mentions légales"><img src="../../images/tripavidsorIcon.jpg" alt="logo site"></a>
-                <a href="#" title="Page Mentions légales"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
-                <a href="#" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="logo site"></a>
-                <a href="#" title="Page Mentions légales"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
-                <a href="#" title="Page Mentions légales"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
-              </p>
-            </div>
+  <footer>
+    <!--<link rel="stylesheet" href="styles/foundation.min.css" />-->
+    <div class="row">
+      <div class="footerCss">
+        <div class="columns large-4 medium-4 small-4">
+          <div class="leftFooter">
+            <p>
+              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/iconTripadvisor.jpg" alt="logo site"></a>
+              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/iconFourchette.jpg" alt="logo site"></a>
+              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/iconMichelin.jpg" alt="Michelin et La Récréation"></a>
+              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/iconBonneTable.jpg" alt="logo site"></a>
+              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/iconFacebook.jpg" alt="logo site"></a>
+            </p>
           </div>
-          <div class="columns large-4 medium-4 small-4">
-            <div class="middleFooter">
-              <p id="informationsFooter">La Récréation @2017 | 05 65 22 88 08</p>
-            </div>
+        </div>
+        <div class="columns large-4 medium-4 small-4">
+          <div class="middleFooter">
+            <p id="informationsFooter">La Récréation @2017 | 05 65 22 88 08</p>
           </div>
-          <div class="columns large-4 medium-4 small-4">
-            <div class="rightFooter">
-              <a class="lineUnderLink" href="../../pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
-            </div>
+        </div>
+        <div class="columns large-4 medium-4 small-4">
+          <div class="rightFooter">
+            <a class="lineUnderLink" href="../../pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
           </div>
         </div>
       </div>
-    </footer>
-    <script type="text/javascript" src="../../scripts/main.js"></script>
-  </body>
+    </div>
+  </footer>
+  <script type="text/javascript" src="../../scripts/main.js"></script>
+</body>
