--- a/pages/french/menuAndWine.html
+++ b/pages/french/menuAndWine.html
@@ -75,11 +75,14 @@
               <p>CARTE DES VINS</p>
             </div>
           </div>
-          <div class="openMenu">
+        </div>
+        <div class="openMenu">
+           <p class="text1">
             Menu du petit écolier :<br/><br/> 
             37€ <br/><br/>  
             Entrée + Plat + Dessert <br/><br/> 
-            Un menu haut en couleur qui vous fera découvrir les créations du chef, ou encore les classiques de La Récréation. 
+            Un menu haut en couleur qui vous fera découvrir les créations du chef, ou encore les classiques de La Récréation.
+          </p> 
             <p class="text2">
             Menu du maître d’école :<br/><br/> 
             46€ <br/><br/>  
@@ -93,14 +96,11 @@
             Carte des vins :<br/><br/> 
             Le restaurant vous permettra de découvrir les saveurs de la région. Une carte variée, entre vins de Cahors, classiques Français ou encore grands vins dans la cave du restaurant, la Récréation devrait régaler les amateurs de vin. </p>
           </div>
-        </div>
       </div>
-    </div>
     </div>
   </section>
 
   <footer>
-    <!--<link rel="stylesheet" href="styles/foundation.min.css" />-->
     <div class="row">
       <div class="footerCss">
         <div class="columns large-4 medium-4 small-4">
