--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <img src="images/slider1.jpg" alt="Crevette sésame">
             <img src="images/slider2.jpg" alt="Douceur de mangue">
             <img src="images/slider3.jpg" alt="Biscuit au chocolat">
+            <img src="images/slider1.jpg" alt="Biscuit au chocolat">
           </figure>
         </div>
       </div>
@@ -74,9 +75,7 @@
     <div class="row">
       <div class="columns large-7 medium-12 small-12">
         <div class="videoHome">
-          <video width="520" height="340" controls>
-            <source src="images/laRecreation.mp4" type="video/mp4" alt="Votre navigateur ne supporte pas la balise vidéo.">
-          </video>
+          <iframe width="520" height="315" src="https://www.youtube.com/embed/ue_Gb2Lqw1I?ecver=1" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
 
