--- a/pages/french/contactAndPartner.html
+++ b/pages/french/contactAndPartner.html
@@ -78,8 +78,7 @@
             <br/> Pour finir sur une bonne note, notre carte de vins vous proposera une grande diversités pour accompagner tous nos mets. Des vins de régions comme le goûteux Château Lamartine et ses trois déclinaisons.
             <br/>
             <br/> La Récréation et ses partenaires n'attendent plus que vous !
-            <br/>
-            <br/> Liste des partenaires
+          </p> <p class="partners">Liste des partenaires
             <br/>
             <br/> Voisin du restaurant : ( nom à vérifier )
             <br/> Mets : Entreprise Métro Toulouse
