--- a/pages/french/contactAndPartner.html
+++ b/pages/french/contactAndPartner.html
@@ -56,7 +56,10 @@
             <br/>46250 Les Arques</p>
           <p id="contactPhoneHome">Tél : 05 65 22 88 08</p>
           <h2>Horaires et jours d'ouverture</h2>
-          <p>Du <font color="#CC76CA">lundi</font> au <font color="#CC76CA">dimanche</font> de 12h à 15h15 et de 19h30 à 21h15. Fermé le mercredi et le jeudi.</p>
+          <p>Du <font color="#CC76CA">lundi</font> au <font color="#CC76CA">dimanche</font> de 12H à 13H30
+Et de 19h30 à 21h00 Fermé le Mercredi et jeudi
+sauf en juillet et Aout fermé UNIQUEMENT le Mercredi.
+</p>
         </div>
       </div>
 
@@ -71,18 +74,20 @@
         <div class="firstTextContact">
           <h2>NOS PARTENAIRES</h2>
           <p>Voulant respecter notre région et la mettre en valeur, nous travaillons avec des partenaires locaux qui permettent des produits de qualité.
-            <br/> Nos légumes d'été ou encore nos herbes aromatisées viennent du potager d'à côté ! Un potager entretenu par un ancien élève de l'école qui donne du cœur à l'ouvrage et donc du cœur à nos légumes.
+            <br/>Nos légumes d'été ou encore nos herbes aromatisées viennent du potager d'à côté ! Un potager entretenu par un ancien élève de l'école qui donne du cœur à l'ouvrage et donc du cœur à nos légumes.
 
-            <br/> Pour nos viandes ou poissons ? Ils sont directement choisis par le gérant de l'établissement de sorte à respecter notre engagement auprès des producteurs locaux ou français !
+            <br/>Pour nos viandes ou poissons ? Ils sont directement choisis par le gérant de l'établissement de sorte à respecter notre engagement auprès des producteurs locaux ou français !
 
-            <br/> Pour finir sur une bonne note, notre carte de vins vous proposera une grande diversités pour accompagner tous nos mets. Des vins de régions comme le goûteux Château Lamartine et ses trois déclinaisons.
+            <br/>Pour finir sur une bonne note, notre carte de vins vous proposera une grande diversités pour accompagner tous nos mets. Des vins de régions comme le goûteux Château Lamartine et ses trois déclinaisons.
             <br/>
-            <br/> La Récréation et ses partenaires n'attendent plus que vous !
-          </p> <p class="partners">Liste des partenaires
+            <br/>La Récréation et ses partenaires n'attendent plus que vous !
+          </p>
+          <p class="partners">Liste des partenaires
             <br/>
-            <br/> Voisin du restaurant : ( nom à vérifier )
-            <br/> Mets : Entreprise Métro Toulouse
-            <br/> Vins : à rajouter des que je suis chez moi .</p>
+            <br/><a href="http://www.bonnestables-lot.fr/fiche.php?idfiche=7" title="">Les bonnes tables du lot</a>
+            <br/><a href="http://www.quercygourmand.tv/video/recette__tatin_foie_gras__magret_seche_-_quercygourmand-tv/" title="">Quercy gourmand TV</a>
+            <br/><a href="https://www.domaine-de-montsalvy.com/fr/" title="">Domaine de Montsalvy</a>
+          </p>
         </div>
       </div>
     </div>
