--- a/pages/french/kitchenAndTakeaway.html
+++ b/pages/french/kitchenAndTakeaway.html
@@ -58,23 +58,40 @@
         <div class="columns large-5 medium-12 small-12">
           <div class="firstTextKitchen">
             <h2>NOS COURS DE CUISINE</h2>
-            <p>Notre chef vous propose des cours de cuisine le temps d’une matinée et d’un déjeuner le midi. Venez apprendre à cuisiner des saveurs exotiques ou encore des plats traditionnels revisités par notre chef Rémy Cougnac durant ces cours de cuisine de 3 heures. Créer avec nous nos raviolis de homard sauce corail, des croustillants de saint Jacques aux cheveux d’anges, des suprêmes de cailles désossés ou encore une douceur de mangue au coeur coulant passion. Vous assisterez à une création de cocktail qui vous permettra d’accompagner vos créations gastronomiques du midi.
-            </p>
+            <p>Notre chef vous propose des cours de cuisine le temps d’une matinée et d’un déjeuner le midi. Venez apprendre à cuisiner des saveurs exotiques ou encore des plats traditionnels revisités par notre chef Rémy Cougnac durant ces cours de cuisine de 3 heures. Créer avec nous nos raviolis de homard sauce corail, des croustillants de saint Jacques aux cheveux d’anges, des suprêmes de cailles désossés ou encore une douceur de mangue au coeur coulant passion. Vous assisterez à une création de cocktail qui vous permettra d’accompagner vos créations gastronomiques du midi. </p>
           </div>
         </div>
       </div>
     </div>
-    <div class="middlePartKitchen">
+    <div id="middlePartKitchen">
       <div class="row">
         <div class="columns large-12 medium-12 small-12">
-          <div class="middleTextKitchen">
-            <p>Tarifs cours de cuisine :
+          <div class="middlePartText">
+            <h2>Déroulement des cours</h2>
+            <p>8h50 Arrivée, café et briefing.
+              <br/> 9h00 Début des ateliers.
+              <br/> 12h00 Fin des ateliers.
+              <br/> 12h10 Confection d'un cocktail de la carte et dégustation des amuses bouches (élèves et accompagnateurs).
+              <br/> 12h30 Tout le groupe déguste le menu préparé (élèves et accompagnateurs).
+              <br/> 14h30/15h Fin de la session.
               <br/>
-              <br/> 76€ : cours de cuisine de 2h30 + création de cocktail + déjeuner du midi
-              <br/> 40€ : accompagnant au déjeuner du midi.
+              <br/> Tarifs:
               <br/>
-              <br/> N’hésitez pas à nous contacter pour des renseignements
-              <br/>supplémentaires au 05 65 22 88 08.</p>
+              <br/> Elèves: 65 € (Cours de cuisine, cocktail et repas dégustation).
+              <br/> Accompagnateurs: 35 € (cocktail et repas dégustation).
+              <br/> RESERVATION : 05 65 22 88 08 ou lsoupirot@gmail.com.
+              <br/>
+              <br/> Rappel:
+              <br/>
+              <br/> Élèves: Assistent et participent au cours de cuisine, mettent en application chaque étape décrite par le chef cuisinier.
+              <br/>
+              <br/> Accompagnateurs: Ils peuvent prendre des photos, assister au cours en tant que spectateurs ou animateurs, ils sont en revanche bien présents pour déguster et critiquer.
+              <br/> Ils peuvent également arriver à midi pour la partie dégustation.
+              <br/>
+              <br/> Matériel Fourni:
+              <br/>
+              <br/> Tablier, torchon, couteau d'office et planche à découper sont fournis.
+            </p>
           </div>
         </div>
       </div>
