--- a/pages/french/contactAndPartner.html
+++ b/pages/french/contactAndPartner.html
@@ -56,10 +56,8 @@
             <br/>46250 Les Arques</p>
           <p id="contactPhoneHome">Tél : 05 65 22 88 08</p>
           <h2>Horaires et jours d'ouverture</h2>
-          <p>Du <font color="#CC76CA">lundi</font> au <font color="#CC76CA">dimanche</font> de 12H à 13H30
-Et de 19h30 à 21h00 Fermé le Mercredi et jeudi
-sauf en juillet et Aout fermé UNIQUEMENT le Mercredi.
-</p>
+          <p>Du <font color="#CC76CA">lundi</font> au <font color="#CC76CA">dimanche</font> de 12H à 13H30 Et de 19h30 à 21h00 Fermé le Mercredi et jeudi sauf en juillet et Aout fermé UNIQUEMENT le Mercredi.
+          </p>
         </div>
       </div>
 
